Add Prolific watcher service and extension refresh/auth handling

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,42 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+# Tokens and credentials
+token.json
+studies_headers.json
+prolific_watcher.db
+prolific_watcher.db-shm
+prolific_watcher.db-wal
+
+# Go build artifacts
+prolific-watcher
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary
 *.test
 
-# Code coverage profiles and other test artifacts
+# Output of the go coverage tool
 *.out
-coverage.*
-*.coverprofile
-profile.cov
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
-.env
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# OS files
+.DS_Store
+Thumbs.db
+
+# LocalStorage extension (keep source, ignore packaged artifacts)
+localstorage-extension/*.xpi
+localstorage-extension/*.zip
+
+# Build artifacts
+dist/
+build/
