refactor: move extension/backend sync to websocket

--- a/localstorage-extension/manifest.json
+++ b/localstorage-extension/manifest.json
@@ -14,8 +14,18 @@
   ],
   "host_permissions": [
     "*://*.prolific.com/*",
-    "http://localhost:8080/*"
+    "http://localhost:8080/*",
+    "ws://localhost:8080/*",
+    "http://127.0.0.1:8080/*",
+    "ws://127.0.0.1:8080/*",
+    "https://localhost:8080/*",
+    "wss://localhost:8080/*",
+    "https://127.0.0.1:8080/*",
+    "wss://127.0.0.1:8080/*"
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:8080 ws://localhost:8080 http://127.0.0.1:8080 ws://127.0.0.1:8080 https://localhost:8080 wss://localhost:8080 https://127.0.0.1:8080 wss://127.0.0.1:8080;"
+  },
   "background": {
     "scripts": [
       "background.js"
